src/objects/JBCXM__PageInfo__c.object
<CustomObject>
    <description>To maintain page level information</description>
    <fields>
        <fullName>JBCXM__DisplayOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Stores display order of a page specific to survey</description>
        <inlineHelpText>Stores display order of a page specific to survey</inlineHelpText>
        <label>Page display order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsTranslation__c</fullName>
        <formula>NOT(ISBLANK(JBCXM__TranslationFor__c))</formula>
        <label>Is translation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__Language__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Language Code</description>
        <label>Language</label>
        <referenceTo>JBCXM__GSLanguage__c</referenceTo>
        <relationshipLabel>Survey Page Translation</relationshipLabel>
        <relationshipName>SurveyPageLanguage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__MetaData__c</fullName>
        <description>Meta Data</description>
        <label>MetaData</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup on survey</description>
        <label>Survey</label>
        <referenceTo>JBCXM__Survey__c</referenceTo>
        <relationshipLabel>PageInfo</relationshipLabel>
        <relationshipName>PageInfo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__TranslationFor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>JBCXM__PageInfo__c</referenceTo>
        <relationshipLabel>Parent</relationshipLabel>
        <relationshipName>SurveyTranslatedPages</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PageInfo</label>
    <nameField>
        <label>PageInfo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PageInfo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>